<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/home_panel_background_iv"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:contentDescription="@string/home_panel_background_iv"
            android:src="@drawable/img_first_album_default"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/home_panel_btn_mike_iv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/home_panel_btn_mike_iv"
            android:src="@drawable/btn_main_mike"
            app:layout_constraintEnd_toStartOf="@+id/home_panel_btn_ticket_iv"
            app:layout_constraintTop_toTopOf="@+id/home_panel_btn_setting_iv" />

        <ImageView
            android:id="@+id/home_panel_btn_ticket_iv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/home_panel_btn_ticket_iv"
            android:src="@drawable/btn_main_ticket"
            app:layout_constraintEnd_toStartOf="@+id/home_panel_btn_setting_iv"
            app:layout_constraintTop_toTopOf="@+id/home_panel_btn_setting_iv" />

        <ImageView
            android:id="@+id/home_panel_btn_setting_iv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/home_panel_btn_setting_iv"
            android:src="@drawable/btn_main_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_panel_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/home_panel_title_tv"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/home_panel_btn_mike_iv"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/home_panel_btn_play_iv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/home_panel_btn_play_iv"
            android:src="@drawable/btn_panel_play_large"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_panel_title_tv" />

        <TextView
            android:id="@+id/home_panel_album_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_panel_album_info_tv"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/home_panel_album_img_iv"
            app:layout_constraintStart_toStartOf="@+id/home_panel_album_img_iv"/>

        <ImageView
            android:id="@+id/home_panel_album_img_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/home_panel_album_img_iv"
            android:src="@drawable/img_album_exp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/home_panel_background_iv" />

        <TextView
            android:id="@+id/home_panel_album_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_panel_album_title_tv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/home_panel_album_img_iv"
            app:layout_constraintTop_toTopOf="@+id/home_panel_album_img_iv"/>

        <TextView
            android:id="@+id/home_panel_album_singer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_panel_album_singer_tv"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/home_panel_album_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/home_panel_album_title_tv"
            app:layout_constraintBottom_toBottomOf="@+id/home_panel_album_img_iv"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>